[package]
name = "warp-packer"
version = "0.4.0"
authors = ["Diego Giagio <diego@giagio.com>"]
edition = "2021"

[dependencies]
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.0"
lazy_static = "1.1.0"
tar = "0.4"
tempdir = "0.3.7"
uuid = { version = "1.2", features = ["v4"] }
warp-args = { path = "../warp-args" }
