[package]
name = "warp-packer"
version = "1.1.1"
authors = ["Diego Giagio <diego@giagio.com>", "Reisz", "kirbylink"]
edition = "2021"

[dependencies]
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
lazy_static = "1.5.0"
tar = "0.4"
tempdir = "0.3.7"
uuid = { version = "1.18", features = ["v4"] }
warp-args = { path = "../warp-args" }
