[package]
name = "warp-runner"
version = "1.0.0"
authors = ["Diego Giagio <diego@giagio.com>", "Reisz", "kirbylink"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
directories = "6.0"
flate2 = "1.0"
log = "0.4.5"
memmem = "0.1.1"
remove_dir_all = "1.0"
simple_logger = "5.0"
tar = "0.4"
warp-args = { path = "../warp-args" }
